--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
             emailjs.init("vawaxLVEzJMAVbut0");
         })();
     </script>
-    <!-- LeanCloud SDK -->
+    <!-- Supabase Client (CDN for browser) -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script>
+        const SUPABASE_URL = 'https://mmkugdibsaeoevliebzk.supabase.co';
+        const SUPABASE_KEY = 'sb_publishable_lwkiF-sQ80z8e9oMcejFPQ_j7oezjcF';
+        window.supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+        console.log('Supabase browser client initialized');
+    </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
-    <script src="./leancloud-init.js?v=1764163660" defer></script>
-    <script src="./leancloud-auth-functions.js?v=NO_AUTO_SELECT_V1" defer></script>
-    <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
+
+    <!-- Supabase Auth -->
+    <script src="./supabase-auth-functions.js?v=GUESTBOOK_MIGRATION" defer></script>
+
+    <!-- Supabase Guestbook -->
+    <script src="./supabase-guestbook-functions.js?v=INITIAL" defer></script>
     <script src="./security-cards.js?v=CLEAN_V1" defer></script>
-
-    <!-- Google Sign-In SDK -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-
-    <!-- Google OAuth Implementation -->
-    <script src="./google-oauth.js?v=20251126_CORRECT_CLIENT_ID" defer></script>
 
     <!-- Force Input Background Fix -->
     <script src="./force-input-bg-fix.js?v=3" defer></script>
