优化 Gallery 用户菜单 UI

--- a/index.html
+++ b/index.html
@@ -468,6 +468,18 @@
 
             <div class="divider" style="margin: 5px 0; border-top: 1px solid rgba(255,255,255,0.1);"></div>
 
+            <!-- Enter Studio (Admin Only) -->
+            <div class="menu-item enter-studio" id="enterStudioBtn" style="display: none;"
+                onclick="window.location.href='admin-studio.html'">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <path d="M8 14s1.5 2 4 2 4-2 4-2"></path>
+                    <line x1="9" y1="9" x2="9.01" y2="9"></line>
+                    <line x1="15" y1="9" x2="15.01" y2="9"></line>
+                </svg>
+                Enter Studio
+            </div>
+
             <div class="menu-item switch-account" onclick="window.handleSwitchAccount(event)">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
