--- a/prompts.html
+++ b/prompts.html
@@ -16,6 +16,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="prompts-poetry.css">
+    <link rel="stylesheet" href="avatar-fix.css?v=2">
 
     <!-- Prevent flash of wrong theme - Critical CSS -->
     <script>
